Feature/17 native http capability
